Refactor README.md and .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,23 @@
 __pycache__/
 *.py[cod]
+*.env
 *.sqlite3
 *.log
-*.pot
-*.pyc
-*.db
-*.sqlite3
-media/
-staticfiles/
-.env
+
+venv/
+env/
+
 .vscode/
 .idea/
+
+db.sqlite3
+/media/
+*.pot
+*.pyc
 .DS_Store
-Thumbs.db
+
+**/migrations/
+!**/migrations/__init__.py
+
+.env
+*.secret
